--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: "StretchPro";
+  src: local("StretchPro") 
+  url("./assets/StretchPro.otf") format("");
+}
