--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Red+Hat+Display:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
   margin: 0;
@@ -14,3 +14,24 @@
   --fourth-color: #033649;
   --fifth-color: #031634;
 }
+
+@font-face {
+  font-family: "StretchPro";
+  src: local("stretchpro"),
+   url("./fonts/stretchpro.woff") format("woff"),
+   local("stretchpro2"),
+   url("./fonts/stretchpro2.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "BlueAngel";
+  src: local("BlueAngel"),
+    url("./fonts/BlueAngel.ttf") format("truetype"); 
+}
+
+@font-face {
+  font-family: "MonumentBold";
+  src: local("PPMonumentExtended-Regular")
+    url("./fonts/PPMonumentExtended-Regular.otf") format("opentype");
+}
+
