--- a/src/styles/Topbar.css
+++ b/src/styles/Topbar.css
@@ -15,11 +15,20 @@
 #main-brand {
   font-size: 2rem;
   margin: 0;
+  letter-spacing: 1px;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .topbar-1 {
   padding: 0;
   line-height: 100%;
+  letter-spacing: 1px;
 }
 
 .topbar-2 {
@@ -28,7 +37,7 @@
 }
 
 .bolder {
-  font-weight: 600;
+  font-weight: 700;
 }
 
 .topbar-3 {
@@ -37,8 +46,8 @@
   justify-content: right;
   text-align: right;
   line-height: 100%;
+  letter-spacing: 1px;
 }
-
 
 .lato {
   font-size: 52px;
@@ -46,6 +55,7 @@
   letter-spacing: 8px;
   margin: 0;
   padding: 0;
+  margin-top: 1rem;
 }
 
 .blue-angel {
