--- a/src/styles/Topbar.css
+++ b/src/styles/Topbar.css
@@ -20,6 +20,7 @@
   font-size: 2rem;
   margin: 0;
   letter-spacing: 1px;
+  cursor: pointer;
 }
 
 .header {
@@ -63,8 +64,41 @@
 }
 
 .blue-angel {
-  font-size: 128px;
+  font-size: 160px;
   font-family: "BlueAngel", sans-serif;
   margin: 0;
   padding: 0;
+}
+
+/* WORKS STYLING */
+
+.works1 {
+  display: flex;
+  align-items: center;
+  padding: 0;
+  gap: 1rem;
+}
+.works-div1 {
+  width: 50%;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 1px;
+  line-height: 18px;
+  text-align: left;
+}
+
+.works3 {
+  display: flex;
+  align-items: center;
+  padding: 0;
+  justify-content: right;
+  gap: 1rem;
+}
+.works-div3 {
+  width: 50%;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 1px;
+  line-height: 18px;
+  text-align: right;
 }
