--- a/src/styles/Topbar.css
+++ b/src/styles/Topbar.css
@@ -68,6 +68,7 @@
   font-family: "BlueAngel", sans-serif;
   margin: 0;
   padding: 0;
+  padding-top: 1rem;
 }
 
 /* WORKS STYLING */
@@ -102,3 +103,31 @@
   line-height: 18px;
   text-align: right;
 }
+
+/* ABOUT STYLING */
+
+.about1, .about2, .about3 {
+  height: 30vh;
+}
+
+.about3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+  margin-right: -0.5rem;
+  position: relative;
+}
+
+.about3 .lato {
+  display: flex;
+  justify-content: flex-end;
+  position: absolute;
+  font-size: 4.1rem;
+  letter-spacing: 7px;
+  margin-top: 1rem;
+  font-family: "BlueAngel", sans-serif;
+  top: 1.5rem;
+  right: 0;
+}
+
