--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,10 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Red Hat Display", sans-serif;
+  color: #121212;
+  
 }
+
 
 :root {
   --first-color: #e8ddcb;
