--- a/src/styles/Botbar.css
+++ b/src/styles/Botbar.css
@@ -119,8 +119,45 @@
   bottom: 0;
   left: 0;
   z-index: -1;
-  opacity: 0.8;
+  filter: drop-shadow(1rem 1rem #121212);
 }
+
+.about-desc-col {
+  padding: 1rem;
+  padding-right: 0;
+  padding-top: 2rem;
+}
+
+.philosophy-card {
+  padding: 1rem;
+  padding-top: 1.4rem;
+  width: 50%;
+}
+.philosophy {
+  color: #f5f5f5;
+  font-size: 3rem;
+  font-weight: 900;
+  font-family: "Red Hat Display", sans-serif;
+  -webkit-text-stroke: 1px black;
+  letter-spacing: 6px;
+  margin-top: -0.8rem;
+  margin-bottom: -0.4rem;
+}
+
+.about-desc-col .blue-angel1 {
+  font-size: 3rem;
+  letter-spacing: 1.5px;
+  margin-top: -0.8rem;
+  font-family: "BlueAngel", sans-serif;
+}
+
+.about-desc-col .blue-angel2 {
+  font-family: "BlueAngel", sans-serif;
+  letter-spacing: 1px;
+  font-size: 3rem;
+  margin-top: -0.1rem;
+}
+
 
 
 /* MAIN IMAGE ANIMATION */
