--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,12 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Red Hat Display", sans-serif;
-  color: #121212;
+}
+
+body {
   
+  color: #121212;
+  background-color: #f5f5f5;
 }
 
 
