--- a/src/styles/Botbar.css
+++ b/src/styles/Botbar.css
@@ -224,25 +224,52 @@
   .about-education {
     display: flex;
     flex-direction: column;
-    padding: 0.5rem;
-    /* border: solid 2px rgb(18, 18, 18, 0.5); */
-    border-radius: 1rem;
-    /* box-shadow: 0.4rem 0.4rem #f5f5f5;
-    margin-right: 0.4rem; */
-    background-color: rgb(18, 18, 18);
   }
   .pup {
-    font-size: 1.743rem;
-    font-weight: 900;
-    font-family: "Red Hat Display", sans-serif;
     text-transform: uppercase;
-    margin: 0;
-    line-height: 1.75rem;
-    color: #f5f5f5;
-    -webkit-text-stroke: 1px rgb(18, 18, 18, 0.5);
+    font-weight: 200;
+    font-size: 1.97rem;
+    line-height: 2.2rem;
+    font-weight: bold;
   }
   .pup2 {
-    font-size: 2.3rem;
+    font-size: 2.61rem;
+  }
+  .cpe-row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0;
+    margin-top: -0.5rem;
+  }
+  .cpe {
+    font-weight: 400;
+    margin: 0;
+    letter-spacing: 1px;
+  }
+  .cpe-year {
+    font-size: 3.8rem;
+    -webkit-text-stroke: 1px black;
+    color: #f5f5f5;
+    margin: 0;
+  }
+  .shs-row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1rem;
+    margin: 0;
+    margin-top: -0.2rem;
+  }
+  .shs {
+    font-weight: 400;
+    margin: 0;
+  }
+  .shs-year {
+    font-size: 2.7rem;
+    -webkit-text-stroke: 1px black;
+    color: #f5f5f5;
+    margin: 0;
   }
 }
 
