--- a/src/styles/Botbar.css
+++ b/src/styles/Botbar.css
@@ -114,7 +114,7 @@
 
   .levi {
     position: absolute;
-    height: 90vh;
+    width: 37%;
     bottom: 0;
     left: 0;
     z-index: -1;
@@ -158,7 +158,7 @@
 
   .about-desc1-container {
     margin-top: 0.5rem;
-    margin-left: 3.5rem;
+    margin-left: 4rem;
     text-align: justify;
     display: flex;
     align-items: center;
@@ -240,7 +240,7 @@
     align-items: center;
     justify-content: space-between;
     margin: 0;
-    margin-top: -0.5rem;
+    margin-top: -0.9rem;
   }
   .cpe {
     font-weight: 400;
@@ -259,17 +259,40 @@
     justify-content: space-between;
     gap: 1rem;
     margin: 0;
-    margin-top: -0.2rem;
+    margin-top: -0.5rem;
   }
   .shs {
     font-weight: 400;
     margin: 0;
+    letter-spacing: 1px;
+    font-size: 1.1rem;
   }
   .shs-year {
-    font-size: 2.7rem;
-    -webkit-text-stroke: 1px black;
-    color: #f5f5f5;
+    font-size: 3.8rem;
     margin: 0;
+    font-size: 1.8rem;
+  }
+  .svias-row {
+    border-top: solid 1px #121212;
+    padding-top: 0.4rem;
+  }
+  .svias {
+    font-size: 1.14rem;
+    text-transform: uppercase;
+  }
+  .career-process {
+    background-color: #121212;
+    color: #f5f5f5;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+  .career {
+    font-family: "StretchPro", sans-serif;
+    text-transform: uppercase;
+    padding: 0;
+    margin: 0;
+    letter-spacing: 2px;
   }
 }
 
