--- a/src/styles/Midbar.css
+++ b/src/styles/Midbar.css
@@ -3,6 +3,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 0;
+    position: relative;
 }
 
 .midbar1 {
