--- a/src/styles/Botbar.css
+++ b/src/styles/Botbar.css
@@ -317,12 +317,39 @@
   /* CONTACT BOTBAR STYLING */
   #botbar-contact {
     height: 45vh;
+    display: flex;
+    padding: 0;
+  }
+
+  .botbar-contact1 {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding-top: 0.2rem;
+  }
+  .hover {
+    display: flex;
+    justify-content: center;
+    font-family: "StretchPro", sans-serif;
+    margin: 0;
+    -webkit-text-stroke: 1px #121212;
+    color: #f5f5f5;
+    font-size: 3.35rem;
+    height: 3rem;
+    letter-spacing: 1.8px;
+    margin-top: -1rem;
   }
 }
 
 
 .card {
-  position: relative;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   width: 200px;
   height: 200px;
   border-radius: 1rem;
@@ -414,7 +441,7 @@
   height: 50%;
   bottom: -50%;
   left: -50%;
-  transition-delay: 0.2s;
+  transition-delay: 0.1s;
   border: 2px solid #121212;
 }
 
@@ -435,7 +462,7 @@
   height: 30%;
   bottom: -30%;
   left: -30%;
-  transition-delay: 0.4s;
+  transition-delay: 0.2s;
   border: 2px solid #121212;
 }
 
