--- a/src/styles/Botbar.css
+++ b/src/styles/Botbar.css
@@ -351,6 +351,28 @@
     position: absolute;
     bottom: 0;
   }
+  .contacts-div {
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+    align-items: flex-end;
+  }
+  .contacts-div1, .contacts-div2, .contacts-div3 {
+    margin-bottom: 1rem;
+  }
+  .contacts {
+    font-weight: 100;
+    margin: 0;
+  }
+  .contacts-icon {
+    margin-top: -8px;
+    margin-left: 1rem;
+  }
+  .email {
+    font-size: 1.5rem;
+    font-weight: 100;
+    margin: 0;
+  }
 }
 
 .card {
