--- a/src/styles/Botbar.css
+++ b/src/styles/Botbar.css
@@ -356,9 +356,13 @@
     flex-direction: column;
     text-align: right;
     align-items: flex-end;
+    height: 100%;
   }
   .contacts-div1, .contacts-div2, .contacts-div3 {
     margin-bottom: 1rem;
+  }
+  .contacts-div1 {
+    margin-top: 1rem;
   }
   .contacts {
     font-weight: 100;
