--- a/src/styles/Botbar.css
+++ b/src/styles/Botbar.css
@@ -377,6 +377,11 @@
     font-weight: 100;
     margin: 0;
   }
+  .copy-icon {
+    margin-left: 1rem;
+    opacity: .7;
+    margin-top: -4px;
+  }
 }
 
 .card {
