--- a/src/styles/Botbar.css
+++ b/src/styles/Botbar.css
@@ -360,17 +360,37 @@
   }
   .contacts-div1, .contacts-div2, .contacts-div3 {
     margin-bottom: 1rem;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
   }
   .contacts-div1 {
     margin-top: 1rem;
+    margin-bottom: 0;
+  }
+  .div-email {
+    margin-bottom: 1.5rem;
   }
   .contacts {
     font-weight: 100;
     margin: 0;
+    position: relative;
   }
-  .contacts-icon {
-    margin-top: -8px;
+  .contacts:before {
+    content: "";
+    position: absolute;
+    bottom: -2px;
+    height: 1px;
+    width: 0;
+    background: #121212;
+    transition: width 0.3s ease;
+  }
+  .contacts:hover:before {
+    width: 100%;
+  }
+  .contacts-icon1, .contacts-icon2, .contacts-icon3 {
     margin-left: 1rem;
+    font-size: 2.5rem;
   }
   .email {
     font-size: 1.5rem;
@@ -381,6 +401,18 @@
     margin-left: 1rem;
     opacity: .7;
     margin-top: -4px;
+  }
+  .contacts-div1:hover .contacts-icon1 {
+    transform: translateY(-4px);
+    transition: all .5s ease-in-out;
+  }
+  .contacts-div2:hover .contacts-icon2 {
+    transform: translateY(-4px);
+    transition: 0.5s ease-in-out;
+  }
+  .contacts-div3:hover .contacts-icon3 {
+    transform: translateY(-4px);
+    transition: 0.5s ease-in-out;
   }
 }
 
