--- a/src/styles/Botbar.css
+++ b/src/styles/Botbar.css
@@ -358,7 +358,9 @@
     align-items: flex-end;
     height: 100%;
   }
-  .contacts-div1, .contacts-div2, .contacts-div3 {
+  .contacts-div1,
+  .contacts-div2,
+  .contacts-div3 {
     margin-bottom: 1rem;
     display: flex;
     align-items: center;
@@ -385,10 +387,12 @@
     background: #121212;
     transition: width 0.3s ease;
   }
-  .contacts-icon1, .contacts-icon2, .contacts-icon3 {
+  .contacts-icon1,
+  .contacts-icon2,
+  .contacts-icon3 {
     margin-left: 1rem;
     font-size: 2.5rem;
-    transition: all .5s ease-in-out;
+    transition: all 0.5s ease-in-out;
   }
   .email {
     font-size: 1.5rem;
@@ -397,7 +401,7 @@
   }
   .copy-icon {
     margin-left: 1rem;
-    opacity: .7;
+    opacity: 0.7;
     margin-top: -4px;
   }
   .contacts-div1:hover .contacts-icon1 {
@@ -409,14 +413,16 @@
   .contacts-div3:hover .contacts-icon3 {
     transform: translateY(-6px);
   }
-  .contacts-div1 a, .contacts-div2 a, .contacts-div3 a {
+  .contacts-div1 a,
+  .contacts-div2 a,
+  .contacts-div3 a {
     text-decoration: none;
     color: #121212;
     display: flex;
     align-items: center;
   }
-  .contacts-div1 .contacts:hover:before, 
-  .contacts-div2 .contacts:hover:before, 
+  .contacts-div1 .contacts:hover:before,
+  .contacts-div2 .contacts:hover:before,
   .contacts-div3 .contacts:hover:before {
     width: 100%;
   }
@@ -509,19 +515,8 @@
   height: 70%;
   bottom: -70%;
   left: -70%;
-  border: 2px solid #121212;
-}
-
-.box1::before {
-  background: #121212;
-}
-
-.box1:hover::before {
-  opacity: 1;
-}
-
-.box1:hover .icon .svg {
-  filter: drop-shadow(0 0 0 white);
+  border: 1px solid #121212;
+  cursor: pointer;
 }
 
 .box2 {
@@ -530,19 +525,8 @@
   bottom: -50%;
   left: -50%;
   transition-delay: 0.1s;
-  border: 2px solid #121212;
-}
-
-.box2::before {
-  background: #121212;
-}
-
-.box2:hover::before {
-  opacity: 1;
-}
-
-.box2:hover .icon .svg {
-  filter: drop-shadow(0 0 0px white);
+  border: 1px solid #121212;
+  cursor: pointer;
 }
 
 .box3 {
@@ -551,28 +535,8 @@
   bottom: -30%;
   left: -30%;
   transition-delay: 0.2s;
-  border: 2px solid #121212;
-}
-
-.box3::before {
-  background: #121212;
-}
-
-.box3:hover::before {
-  opacity: 1;
-}
-
-.box3:hover .icon .svg {
-  filter: drop-shadow(0 0 0px white);
-}
-
-.box4 {
-  width: 10%;
-  height: 10%;
-  bottom: -10%;
-  left: -10%;
-  transition-delay: 0.6s;
-  border: 2px solid #121212;
+  border: 1px solid #121212;
+  cursor: pointer;
 }
 
 .card:hover {
@@ -592,6 +556,23 @@
 
 .card:hover .orange {
   transform: scale(0.5);
+}
+
+.social-icons1,
+.social-icons2,
+.social-icons3 {
+  font-size: 1.5rem;
+  transition: transform 0.2s ease-in-out;
+}
+
+.box1:hover .social-icons1,
+.box2:hover .social-icons2,
+.box3:hover .social-icons3 {
+  transform: scale(1.2);
+}
+
+.card a {
+  color: #212529;
 }
 
 /* MAIN IMAGE ANIMATION */
