--- a/src/styles/Topbar.css
+++ b/src/styles/Topbar.css
@@ -217,9 +217,17 @@
 
   .topbar-playground {
     height: 30vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
   }
   .topbar-playground-h1 {
     font-size: 10rem;
     font-family: "BlueAngel", sans-serif;
+    margin: 0;
+  }
+  .topbar-playground-h2 {
+    margin: 0;
+    padding: 0;
   }
 }
