--- a/src/styles/Topbar.css
+++ b/src/styles/Topbar.css
@@ -225,8 +225,11 @@
     font-size: 10rem;
     font-family: "BlueAngel", sans-serif;
     margin: 0;
+    padding: 0;
   }
   .topbar-playground-h2 {
+    font-family: "BlueAngel", sans-serif;
+    font-size: 3.5rem;
     margin: 0;
     padding: 0;
   }
