--- a/src/styles/Topbar.css
+++ b/src/styles/Topbar.css
@@ -228,9 +228,11 @@
     padding: 0;
   }
   .topbar-playground-h2 {
-    font-family: "BlueAngel", sans-serif;
-    font-size: 3.5rem;
+    font-family: "Red Hat Display", sans-serif;
+    font-size: 3rem;
     margin: 0;
     padding: 0;
+    text-transform: uppercase;
+    font-weight: 900;
   }
 }
