--- a/src/styles/Topbar.css
+++ b/src/styles/Topbar.css
@@ -230,13 +230,12 @@
   }
   .topbar-playground-h2 {
     font-family: "Red Hat Display", sans-serif;
-    font-size: 3rem;
+    font-size: 2.5rem;
     margin: 0;
     padding: 0;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     font-weight: 900;
     -webkit-text-stroke: 1px #121212;
     color: #f5f5f5;
-    letter-spacing: 6.5px;
   }
 }
