--- a/src/styles/Botbar.css
+++ b/src/styles/Botbar.css
@@ -403,6 +403,7 @@
     margin-left: 1rem;
     opacity: 0.7;
     margin-top: -4px;
+    cursor: pointer;
   }
   .contacts-div1:hover .contacts-icon1 {
     transform: translateY(-6px);
