--- a/src/styles/Topbar.css
+++ b/src/styles/Topbar.css
@@ -227,6 +227,7 @@
     margin: 0;
     padding: 0;
     margin-bottom: -3rem;
+    margin-left: -0.4rem;
   }
   .topbar-playground-h2 {
     font-family: "Red Hat Display", sans-serif;
@@ -237,6 +238,6 @@
     font-weight: 900;
     -webkit-text-stroke: 1px #121212;
     color: #f5f5f5;
-    letter-spacing: 2.5px;
+    letter-spacing: 2.3px;
   }
 }
