--- a/src/styles/Topbar.css
+++ b/src/styles/Topbar.css
@@ -243,20 +243,17 @@
 }
 
 
-.fade-enter {
-  opacity: 0;
+@keyframes rolling-up {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
 
-.fade-enter-active {
-  opacity: 1;
-  transition: opacity 500ms;
-}
-
-.fade-exit {
-  opacity: 1;
-}
-
-.fade-exit-active {
-  opacity: 0;
-  transition: opacity 500ms;
+.rolling-up-animation {
+  animation: rolling-up 0.5s ease-in-out;
 }
