--- a/src/styles/Topbar.css
+++ b/src/styles/Topbar.css
@@ -259,14 +259,14 @@
   transition: opacity 500ms, transform 500ms;
 }
 
-.fade-exit {
+/* .fade-exit {
   opacity: 1;
   transform: translateY(0%);
-}
+} */
 
-.fade-exit-active {
+/* .fade-exit-active {
   opacity: 0;
   transform: translateY(-100%);
-  transition: opacity 500ms, transform 500ms;
-}
+  transition: opacity 9000ms, transform 9000ms;
+} */
 
