--- a/src/styles/Botbar.css
+++ b/src/styles/Botbar.css
@@ -439,7 +439,13 @@
     animation: goingMerry 2s infinite ease-in-out;
     filter: drop-shadow(1rem 1rem #121212);
   }
+
+  /* BOTBAR PLAYGROUND STYLING */
+  .
 }
+
+
+/* UNIVERSAL STYLING */
 
 @keyframes goingMerry {
   0% {
