--- a/src/styles/Botbar.css
+++ b/src/styles/Botbar.css
@@ -442,7 +442,8 @@
 
   /* BOTBAR PLAYGROUND STYLING */
   #botbar-playground {
-    overflow: scroll;
+    overflow-y: scroll;
+  height: 100vh;
   }
 }
 
