--- a/src/styles/Botbar.css
+++ b/src/styles/Botbar.css
@@ -441,9 +441,9 @@
   }
 
   /* BOTBAR PLAYGROUND STYLING */
-  #botbar-playground {
+  .botbar-playground {
     overflow-y: scroll;
-  height: 100vh;
+  height: 40vh;
   }
 }
 
