--- a/src/styles/Botbar.css
+++ b/src/styles/Botbar.css
@@ -442,7 +442,7 @@
 
   /* BOTBAR PLAYGROUND STYLING */
   .botbar-playground {
-    overflow-y: scroll;
+    overflow: scroll;
   height: 40vh;
   }
 }
