--- a/src/styles/Topbar.css
+++ b/src/styles/Topbar.css
@@ -247,9 +247,12 @@
   }
 }
 
-@media only screen and (max-width: 1920px) {
+@media only screen and (max-width: 430px) {
   .navbar-container {
     padding: 0 1rem;
+  }
+  .topbar-2 {
+    display: none;
   }
 }
 
